Changed UI layouts & Gender Enum